# WorkTimeCLI

./: .gitignore  README.md  __init__.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
src/: config.py  entities.py  run.py
src/repos/: factories.py
src/repos/local_storage/: exceptions.py  file.py  interface.py  memory.py
src/repos/task_tracker/: asana.py  exceptions.py  interface.py
src/serializers/: task_serializer.py
src/usecases/: TimeTracking.py
tests/: test_complete.py  test_list.py  test_read.py  test_start.py  test_stop.py
