[tool.poetry]
name = "worktimecli"
version = "0.1.0"
description = ""
authors = ["Daniel Everts <deverts3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asana = "^0.9.1"
tinydb = "^3.15"
PTable = "^0.9.2"
termcolor = "^1.1"
coverage = "^5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"
mypy-extensions = "^0.4.3"
pytest = "^5.2"
virtualenv = "^16.7"
ipython = "^7.9"
ipdb = "^0.12.2"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
